--- a/Modules/ModulesAssembly.asmdef
+++ b/Modules/ModulesAssembly.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "Core",
         "HelperAssembly",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "Unity.Splines",
+        "Unity.Mathematics"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
