--- a/Core/CoreAssembly.asmdef
+++ b/Core/CoreAssembly.asmdef
@@ -3,9 +3,9 @@
     "rootNamespace": "",
     "references": [
         "Unity.InputSystem",
-        "HelperAssembly",
         "UnityEngine.UI",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "HelperAssembly"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
