glTF support, load/safe menu layout adjustements and preset slider

--- a/Modules/ModulesAssembly.asmdef
+++ b/Modules/ModulesAssembly.asmdef
@@ -6,7 +6,8 @@
         "HelperAssembly",
         "Unity.TextMeshPro",
         "Unity.Splines",
-        "Unity.Mathematics"
+        "Unity.Mathematics",
+        "glTFast"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
